2007-09-07  Justin Garcia  <justin.garcia@apple.com>
        
        Rolling out my changes from r25421 while I investigate the layout test failures
        they caused.
        
        * editing/Selection.cpp:
        (WebCore::Selection::validate):
        * editing/VisiblePosition.cpp:
        (WebCore::VisiblePosition::next):
        (WebCore::VisiblePosition::previous):
        (WebCore::VisiblePosition::lastEditablePositionAtOrBefore):
        (WebCore::VisiblePosition::firstEditablePositionAtOrAfter):
        * editing/VisiblePosition.h:
        * editing/visible_units.cpp:
        (WebCore::endOfWord):
        (WebCore::previousWordPosition):
        (WebCore::nextWordPosition):
        (WebCore::startOfLine):
        (WebCore::endOfLine):
        (WebCore::previousSentencePosition):
        (WebCore::nextSentencePosition):

2007-09-05  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler, Maciej Stachowiak, Mark Rowe, Tim Hatcher.
        
        Fixed <rdar://problem/5326009> Make non-browser WebKit clients have no 
        memory cache, or a very tiny one

        Added a client callback to notify WebKit when the first navigation has
        taken place. "Navigation" here means a transition from one page to 
        another that ends up in the back/forward list.
        
        WebKit Mac uses this notification to grow its cache model under certain
        circumstances.
        
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::addBackForwardItemClippedAtTarget):
        * loader/FrameLoaderClient.h:

        * platform/graphics/svg/SVGImageEmptyClients.h:
        (WebCore::SVGEmptyFrameLoaderClient::didPerformFirstNavigation): Ah, 
        SVGEmptyFrameLoaderClient, my old friend. 

2007-09-07  Adele Peterson  <adele@apple.com>

        Reviewed by Dave Harrison.

        Fix for <rdar://problem/5428427> Wrong characters are re-converted after doing reconversion with Kotoeri
